imclient/marslib/include/WFClient.h


typedef void (WFCAPI *fun_general_string_success_callback)(void *pObject, int objectDataType, const char *cval, size_t val_len);

typedef void (WFCAPI *fun_general_error_callback)(void *pObject, int objectDataType, int errorCode);


//send message callback
typedef void (WFCAPI *fun_sendMessage_success_callback)(void *pObject, int objectDataType, long messageId, int64_t messageUid, int64_t timestamp);

typedef void (WFCAPI *fun_sendMessage_prepared_callback)(void *pObject, int objectDataType, long messageId, int64_t saveTime);

typedef void (WFCAPI *fun_sendMessage_progress_callback)(void *pObject, int objectDataType, long messageId, int uploaded, int total);

typedef void(WFCAPI *fun_sendMessage_media_uploaded_callback)(void *pObject, int objectDataType, long messageId, const char *cremoteUrl, size_t remoteUrl_len);

typedef void (WFCAPI *fun_sendMessage_error_callback)(void *pObject, int objectDataType, long messageId, int errorCode);


extern "C" PROTOWRAPPER_API void WFCAPI getMessagesV2(int conversationType, const char *ctarget, size_t target_len, int line, const int acontTypes[], int contTypes_len, int64_t fromIndex, bool direction, int count, const char *cwithUser, size_t withUser_len, fun_general_string_success_callback successCallback, fun_general_error_callback errorCallback, void *pObject, int objectDataType);


extern "C" PROTOWRAPPER_API void WFCAPI getMentionedMessages(int conversationType, const char *ctarget, size_t target_len, int line, int64_t fromIndex, bool direction, int count, fun_general_string_success_callback successCallback, fun_general_error_callback errorCallback, void *pObject, int objectDataType);


extern "C" PROTOWRAPPER_API const char* WFCAPI getMessagesEx(const int aconversationTypes[], int conversationTypes_len, const int alines[], int lines_len, const int acontTypes[], int contTypes_len, int64_t fromIndex, bool direction, int count, const char *cwithUser, size_t withUser_len, size_t *retlen);


extern "C" PROTOWRAPPER_API void WFCAPI getMessagesExV2(const int aconversationTypes[], int conversationTypes_len, const int alines[], int lines_len, const int acontTypes[], int contTypes_len, int64_t fromIndex, bool direction, int count, const char *cwithUser, size_t withUser_len, fun_general_string_success_callback successCallback, fun_general_error_callback errorCallback, void *pObject, int objectDataType);


extern "C" PROTOWRAPPER_API const char* WFCAPI getMessagesByMessageStatus(const int aconversationTypes[], int conversationTypes_len, const int alines[], int lines_len, const int amessageStatuses[], int messageStatuses_len, int64_t fromIndex, bool direction, int count, const char *cwithUser, size_t withUser_len, size_t *retlen);


extern "C" PROTOWRAPPER_API void WFCAPI getMessagesByMessageStatusV2(int conversationType, const char *ctarget, size_t target_len, int line, const int amessageStatuses[], int messageStatuses_len, int64_t fromIndex, bool direction, int count, const char *cwithUser, size_t withUser_len, fun_general_string_success_callback successCallback, fun_general_error_callback errorCallback, void *pObject, int objectDataType);


extern "C" PROTOWRAPPER_API void WFCAPI getMessagesByTimestampV2(int conversationType, const char *ctarget, size_t target_len, int line, const int acontTypes[], int contTypes_len, int64_t timestamp, bool direction, int count, const char *cwithUser, size_t withUser_len, fun_general_string_success_callback successCallback, fun_general_error_callback errorCallback, void *pObject, int objectDataType);


extern "C" PROTOWRAPPER_API void WFCAPI getUserMessagesV2(const char *cuserId, size_t userId_len, int conversationType, const char *ctarget, size_t target_len, int line, const int acontTypes[], int contTypes_len, int64_t fromIndex, bool direction, int count, fun_general_string_success_callback successCallback, fun_general_error_callback errorCallback, void *pObject, int objectDataType);


extern "C" PROTOWRAPPER_API void WFCAPI getRemoteMessages(int conversationType, const char *ctarget, size_t target_len, int line, const int acontentTypes[], int contentTypes_len, int64_t beforeUid, int count, fun_general_string_success_callback successCallback, fun_general_error_callback errorCallback, void *pObject, int objectDataType);


extern "C" PROTOWRAPPER_API void WFCAPI getRemoteMessage(int64_t messageUid, fun_general_string_success_callback successCallback, fun_general_error_callback errorCallback, void *pObject, int objectDataType);


extern "C" PROTOWRAPPER_API const char* WFCAPI getMessage(long messageId, size_t *retlen);


extern "C" PROTOWRAPPER_API const char* WFCAPI getMessageByUid(int64_t messageUid, size_t *retlen);


extern "C" PROTOWRAPPER_API long WFCAPI getFirstUnreadMessageId(int conversationType, const char *ctarget, size_t target_len, int line);


extern "C" PROTOWRAPPER_API const char* WFCAPI searchMessage(int conversationType, const char *ctarget, size_t target_len, int line, const char *ckeyword, size_t keyword_len, bool desc, int limit, int offset, const char *cwithUser, size_t withUser_len, size_t *retlen);


extern "C" PROTOWRAPPER_API const char* WFCAPI sendMessage(int conversationType, const char *ctarget, size_t target_len, int line, const char *cstrcont, size_t strcont_len, const char** cusers, const size_t* userLengths, size_t userCount, int expireDuration, fun_sendMessage_success_callback successCallback, fun_sendMessage_error_callback errorCallback, fun_sendMessage_prepared_callback preparedCallback, fun_sendMessage_progress_callback progressCallback, fun_sendMessage_media_uploaded_callback uploadedCallback, void *pObject, int objectDataType, size_t *retlen);


extern "C" PROTOWRAPPER_API bool WFCAPI sendSavedMessage(long messageId, int expireDuration, fun_sendMessage_success_callback successCallback, fun_sendMessage_error_callback errorCallback, void *pObject, int objectDataType);


extern "C" PROTOWRAPPER_API bool WFCAPI cancelSendingMessage(long messageId);