imclient/lib/src/ffi/wfclient_bindings.dart


  late final void Function(int, Pointer<Char>, int, int, Pointer<Int32>, int, int, bool, int, Pointer<Char>, int, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Pointer<Char>, Size)>>, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Int32)>>, Pointer<Void>, int) getMessagesV2 =
      _lib.lookupFunction<Void Function(Int32, Pointer<Char>, Size, Int32, Pointer<Int32>, Int32, Int64, Bool, Int32, Pointer<Char>, Size, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Pointer<Char>, Size)>>, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Int32)>>, Pointer<Void>, Int32), void Function(int, Pointer<Char>, int, int, Pointer<Int32>, int, int, bool, int, Pointer<Char>, int, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Pointer<Char>, Size)>>, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Int32)>>, Pointer<Void>, int)>('getMessagesV2');

  late final void Function(int, Pointer<Char>, int, int, int, bool, int, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Pointer<Char>, Size)>>, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Int32)>>, Pointer<Void>, int) getMentionedMessages =
      _lib.lookupFunction<Void Function(Int32, Pointer<Char>, Size, Int32, Int64, Bool, Int32, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Pointer<Char>, Size)>>, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Int32)>>, Pointer<Void>, Int32), void Function(int, Pointer<Char>, int, int, int, bool, int, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Pointer<Char>, Size)>>, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Int32)>>, Pointer<Void>, int)>('getMentionedMessages');

  late final Pointer<Char> Function(Pointer<Int32>, int, Pointer<Int32>, int, Pointer<Int32>, int, int, bool, int, Pointer<Char>, int, Pointer<Size>) getMessagesEx =
      _lib.lookupFunction<Pointer<Char> Function(Pointer<Int32>, Int32, Pointer<Int32>, Int32, Pointer<Int32>, Int32, Int64, Bool, Int32, Pointer<Char>, Size, Pointer<Size>), Pointer<Char> Function(Pointer<Int32>, int, Pointer<Int32>, int, Pointer<Int32>, int, int, bool, int, Pointer<Char>, int, Pointer<Size>)>('getMessagesEx');

  late final void Function(Pointer<Int32>, int, Pointer<Int32>, int, Pointer<Int32>, int, int, bool, int, Pointer<Char>, int, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Pointer<Char>, Size)>>, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Int32)>>, Pointer<Void>, int) getMessagesExV2 =
      _lib.lookupFunction<Void Function(Pointer<Int32>, Int32, Pointer<Int32>, Int32, Pointer<Int32>, Int32, Int64, Bool, Int32, Pointer<Char>, Size, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Pointer<Char>, Size)>>, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Int32)>>, Pointer<Void>, Int32), void Function(Pointer<Int32>, int, Pointer<Int32>, int, Pointer<Int32>, int, int, bool, int, Pointer<Char>, int, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Pointer<Char>, Size)>>, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Int32)>>, Pointer<Void>, int)>('getMessagesExV2');

  late final Pointer<Char> Function(Pointer<Int32>, int, Pointer<Int32>, int, Pointer<Int32>, int, int, bool, int, Pointer<Char>, int, Pointer<Size>) getMessagesByMessageStatus =
      _lib.lookupFunction<Pointer<Char> Function(Pointer<Int32>, Int32, Pointer<Int32>, Int32, Pointer<Int32>, Int32, Int64, Bool, Int32, Pointer<Char>, Size, Pointer<Size>), Pointer<Char> Function(Pointer<Int32>, int, Pointer<Int32>, int, Pointer<Int32>, int, int, bool, int, Pointer<Char>, int, Pointer<Size>)>('getMessagesByMessageStatus');

  late final void Function(int, Pointer<Char>, int, int, Pointer<Int32>, int, int, bool, int, Pointer<Char>, int, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Pointer<Char>, Size)>>, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Int32)>>, Pointer<Void>, int) getMessagesByMessageStatusV2 =
      _lib.lookupFunction<Void Function(Int32, Pointer<Char>, Size, Int32, Pointer<Int32>, Int32, Int64, Bool, Int32, Pointer<Char>, Size, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Pointer<Char>, Size)>>, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Int32)>>, Pointer<Void>, Int32), void Function(int, Pointer<Char>, int, int, Pointer<Int32>, int, int, bool, int, Pointer<Char>, int, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Pointer<Char>, Size)>>, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Int32)>>, Pointer<Void>, int)>('getMessagesByMessageStatusV2');

  late final void Function(int, Pointer<Char>, int, int, Pointer<Int32>, int, int, bool, int, Pointer<Char>, int, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Pointer<Char>, Size)>>, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Int32)>>, Pointer<Void>, int) getMessagesByTimestampV2 =
      _lib.lookupFunction<Void Function(Int32, Pointer<Char>, Size, Int32, Pointer<Int32>, Int32, Int64, Bool, Int32, Pointer<Char>, Size, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Pointer<Char>, Size)>>, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Int32)>>, Pointer<Void>, Int32), void Function(int, Pointer<Char>, int, int, Pointer<Int32>, int, int, bool, int, Pointer<Char>, int, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Pointer<Char>, Size)>>, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Int32)>>, Pointer<Void>, int)>('getMessagesByTimestampV2');

  late final void Function(Pointer<Char>, int, int, Pointer<Char>, int, int, Pointer<Int32>, int, int, bool, int, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Pointer<Char>, Size)>>, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Int32)>>, Pointer<Void>, int) getUserMessagesV2 =
      _lib.lookupFunction<Void Function(Pointer<Char>, Size, Int32, Pointer<Char>, Size, Int32, Pointer<Int32>, Int32, Int64, Bool, Int32, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Pointer<Char>, Size)>>, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Int32)>>, Pointer<Void>, Int32), void Function(Pointer<Char>, int, int, Pointer<Char>, int, int, Pointer<Int32>, int, int, bool, int, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Pointer<Char>, Size)>>, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Int32)>>, Pointer<Void>, int)>('getUserMessagesV2');

  late final void Function(int, Pointer<Char>, int, int, Pointer<Int32>, int, int, int, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Pointer<Char>, Size)>>, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Int32)>>, Pointer<Void>, int) getRemoteMessages =
      _lib.lookupFunction<Void Function(Int32, Pointer<Char>, Size, Int32, Pointer<Int32>, Int32, Int64, Int32, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Pointer<Char>, Size)>>, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Int32)>>, Pointer<Void>, Int32), void Function(int, Pointer<Char>, int, int, Pointer<Int32>, int, int, int, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Pointer<Char>, Size)>>, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Int32)>>, Pointer<Void>, int)>('getRemoteMessages');

  late final void Function(int, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Pointer<Char>, Size)>>, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Int32)>>, Pointer<Void>, int) getRemoteMessage =
      _lib.lookupFunction<Void Function(Int64, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Pointer<Char>, Size)>>, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Int32)>>, Pointer<Void>, Int32), void Function(int, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Pointer<Char>, Size)>>, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Int32)>>, Pointer<Void>, int)>('getRemoteMessage');

  late final Pointer<Char> Function(int, Pointer<Size>) getMessage =
      _lib.lookupFunction<Pointer<Char> Function(Long, Pointer<Size>), Pointer<Char> Function(int, Pointer<Size>)>('getMessage');

  late final Pointer<Char> Function(int, Pointer<Size>) getMessageByUid =
      _lib.lookupFunction<Pointer<Char> Function(Int64, Pointer<Size>), Pointer<Char> Function(int, Pointer<Size>)>('getMessageByUid');

  late final int Function(int, Pointer<Char>, int, int) getFirstUnreadMessageId =
      _lib.lookupFunction<Long Function(Int32, Pointer<Char>, Size, Int32), int Function(int, Pointer<Char>, int, int)>('getFirstUnreadMessageId');

  late final Pointer<Char> Function(int, Pointer<Char>, int, int, Pointer<Char>, int, bool, int, int, Pointer<Char>, int, Pointer<Size>) searchMessage =
      _lib.lookupFunction<Pointer<Char> Function(Int32, Pointer<Char>, Size, Int32, Pointer<Char>, Size, Bool, Int32, Int32, Pointer<Char>, Size, Pointer<Size>), Pointer<Char> Function(int, Pointer<Char>, int, int, Pointer<Char>, int, bool, int, int, Pointer<Char>, int, Pointer<Size>)>('searchMessage');

  late final Pointer<Char> Function(int, Pointer<Char>, int, int, Pointer<Char>, int, Pointer<Pointer<Char>>, Pointer<Size>, int, int, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Long, Int64, Int64)>>, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Long, Int32)>>, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Long, Int64)>>, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Long, Int32, Int32)>>, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Long, Pointer<Char>, Size)>>, Pointer<Void>, int, Pointer<Size>) sendMessage =
      _lib.lookupFunction<Pointer<Char> Function(Int32, Pointer<Char>, Size, Int32, Pointer<Char>, Size, Pointer<Pointer<Char>>, Pointer<Size>, Size, Int32, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Long, Int64, Int64)>>, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Long, Int32)>>, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Long, Int64)>>, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Long, Int32, Int32)>>, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Long, Pointer<Char>, Size)>>, Pointer<Void>, Int32, Pointer<Size>), Pointer<Char> Function(int, Pointer<Char>, int, int, Pointer<Char>, int, Pointer<Pointer<Char>>, Pointer<Size>, int, int, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Long, Int64, Int64)>>, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Long, Int32)>>, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Long, Int64)>>, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Long, Int32, Int32)>>, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Long, Pointer<Char>, Size)>>, Pointer<Void>, int, Pointer<Size>)>('sendMessage');

  late final bool Function(int, int, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Long, Int64, Int64)>>, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Long, Int32)>>, Pointer<Void>, int) sendSavedMessage =
      _lib.lookupFunction<Bool Function(Long, Int32, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Long, Int64, Int64)>>, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Long, Int32)>>, Pointer<Void>, Int32), bool Function(int, int, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Long, Int64, Int64)>>, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Long, Int32)>>, Pointer<Void>, int)>('sendSavedMessage');

  late final bool Function(int) cancelSendingMessage =
      _lib.lookupFunction<Bool Function(Long), bool Function(int)>('cancelSendingMessage');
